--- a/final-crucible/index.html
+++ b/final-crucible/index.html
@@ -182,6 +182,8 @@ A march to final war.</p>
 
   
    
+    <a href="https:&#x2F;&#x2F;crisarrius.github.io&#x2F;interior-plains&#x2F;">← Interior Plains</a>
+  
   
 
 </nav>
